--- a/Quiz.html
+++ b/Quiz.html
@@ -1,16 +1,14 @@
-<!-- <!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html>
-<! <body background="bgimage.jpg"> -->
-  <!-- <head>
+ <body background="bloody.png">
+    <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="quiz.css">
-    <title>Quiz for introduction into level 0 of the order</title>
+<!-- //JQUERY LINK HERE// -->
+    <script src="quiz.js"> </script>
+    <title>Calicem Protegit</title>
 <header>
 
-  <! <img src="bloody.png" alt="blood stained background" align="absolute"> --> -->
-
-
-<script src="quiz.js"> </script>
   <img src="mockuplogo.png" alt="Logo for the order" align="center">
   <h2>Welcome initiate, you've cracked the cipher and made it here. One more test. <br>
   <a href="#" class="next">Begin &raquo;</a> </h2>
@@ -21,16 +19,18 @@
   <body>
     <div class="quizContainer">
     <div class="quiz">
-    <form method="postid="question1">
+
+ <form method="postid="question1">
  <h2> Question 1: From what source is the fire of magic born into the hands of human casters?  </h2>
  <input type="radio" name="question1A" value="Suffering"> Suffering. <br>
  <input type="radio" name="question1B" value="Innate Magical Ability"> Innate magical ability.<br>
  <input type="radio" name="question1C" value="Deals with Magical denizens"> Deals with magical denizens. <br>
  <input type="radio" name="question1D" value="all"> All of the above. <br>
-
+ 
 <button type="button"> Submit </button>
  <a href="#" class="next">Next &raquo;</a>
  </form>
+
 
  <form method="postid="question2">
  <h3> Question 2:Your local priest needs help performing an exorcism on a child.  You suspect that this is a very high level possession. What is the only surest way to prevent the demon from jumping meat suits and possessing you instead? </h3>
@@ -45,7 +45,7 @@
    </div>
    </div>
 
-  </body>
+</body>
 
 </html>
 
